# VideoProcessor

./: CMakeLists.txt  README.md
VideoProcessor/: CMakeLists.txt  VideoProcessor.cpp  VideoProcessor.h
src/: main.cpp
